--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Resets e Box Sizing */
+/* Controle Geral */
 * {
     margin: 0;
     padding: 0;
@@ -15,11 +15,69 @@
   body {
     font-family: Arial, sans-serif;
   }
+
+/* Fim do Controle Geral
+    Inicio do Controle da Intro */
+
+    .intro {
+      text-align: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+    
+    #avallon, #portfolio {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #000;
+    }
+    
+    #avallon {
+      font-weight: 400;
+      font-size: 2.1rem;
+    }
+    
+    #portfolio {
+      font-weight: 300;
+      font-size: 1.8rem;
+    }
+    
+    .fade-out {
+      opacity: 1; /* Opacidade inicial */
+      animation: fadeOut 1s ease forwards; /* Animação fadeOut com duração de 1 segundo */
+    }
+    
+    @keyframes fadeOut {
+      from {
+          opacity: 1; /* Opacidade inicial */
+      }
+      to {
+          opacity: 0; /* Opacidade final */
+      }
+    }
+    
+    .fade-in {
+      opacity: 0; /* Inicialmente invisível */
+      animation: fadeIn 1s ease forwards; /* Animação fadeIn com duração de 1 segundo */
+    }
+    
+    @keyframes fadeIn {
+      from {
+          opacity: 0; /* Opacidade inicial */
+      }
+      to {
+          opacity: 1; /* Opacidade final */
+      }
+    }
+
+/* Fim do Controle da Intro 
+    Inicio do Controle do Header  */
   
   header {
     background-color: #333;
     color: #fff;
     padding: 10px 0;
+    display: none;
   }
   
   nav {
@@ -41,7 +99,7 @@
     flex-grow: 1; /* Permitir que o menu-container cresça conforme necessário */
   }
 
-.menu-toggle {
+  .menu-toggle {
     display: none;
     background-color: transparent; /* Definir a cor de fundo como transparente */
     color: #fff;
@@ -78,7 +136,6 @@
     text-decoration: none;
   }
   
-/* Outros estilos */
 
 @media (max-width: 500px) {
     .menu-toggle {
@@ -105,9 +162,12 @@
     }
   }
 
-  
+/* Fim do Controle de Header
+    Inicio do Controle de Main */
+
   main {
     padding: 20px;
+    display: none;
   }
   
   section {
@@ -126,4 +186,65 @@
   p {
     font-size: 16px;
   }
+
+/* Fim do Controle da Main
+    Inicio do controle da Sessão 1 */
+
+/* Fim do Controle da Sessão 1 
+    Inicio do controle da Sessão 2 */
   
+/* Fim do Controle da Sessão 2 
+    Inicio do controle da Sessão 3 */
+
+/* Fim do Controle da Sessão 3 
+    Inicio do controle da Sessão 4 */
+
+/* Fim do Controle da Sessão 4 
+    Inicio do controle da Sessão 5 */
+
+/* Fim do Controle da Sessão 5 
+    Inicio do controle da Sessão 6 */
+
+/* Fim do Controle da Sessão 6 
+    Inicio Animação de manutenção */
+
+  .hammer {
+    width: 32px;
+    height: 32px;
+    background-image: url('imagens/hammer.png');
+    position:relative;
+    left: 50%;
+    top: 50%;
+    animation: hammerAnimation 1.5s infinite linear;
+    z-index: 509;
+    transform-origin: bottom left;
+  }
+  .speech-bubble {
+    position: relative;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 25px;
+    max-width: 200px;
+    top: -50px; /* Ajuste a posição vertical conforme necessário */
+    left: 50%; /* Ajuste a posição horizontal conforme necessário */
+    transform: translateX(-50%);
+  }
+  
+  @keyframes hammerAnimation {
+    0% {
+      transform: translate(-50%, -50%) rotate(0deg);
+    }
+    25% {
+      transform: translate(-50%, -50%) rotate(-60deg);
+    }
+    50% {
+      transform: translate(-50%, -50%) rotate(0deg);
+    }
+    75% {
+      transform: translate(-50%, -50%) rotate(60deg); 
+    }
+    100% {
+      transform: translate(-50%, -50%) rotate(0deg);
+    }
+  }
+  /* Fim da Animação de manutenção */
