--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@
     color: var(--c22); 
     font-weight: 300;
 }
+
 /* Paletas de cores
   roxo #6a0dad 
   verde #3cb371
@@ -119,7 +120,8 @@
     color:var(--c55);
     padding: 10px 0;
 }
- #svgp1{
+/* logo easteregg */
+ /* #svgp1{
   fill:;
  }
  #svgp2{
@@ -127,7 +129,7 @@
  }
  #svgp3{
   fill:;
- }
+ } */
  #svgp4:hover{
   fill:#800080;
  }
@@ -146,6 +148,7 @@
  #svgp9:hover{
   fill:#b80000;
  }
+
 
   .menu-container {
     position: relative;
@@ -197,7 +200,6 @@
     color: var(--c22); /* Links ao passar o mouse */
 }
 
-
 @media (max-width: 520px) {
     .menu-toggle {
       display: block;
@@ -234,7 +236,7 @@
   section {
     margin-bottom: 0px;
     min-height: 100vh; /* Minimum height of viewport */
-    padding: 20px; /* Padding around content */
+    padding: 80px 20px 20px 20px; /* Padding around content */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -250,14 +252,101 @@
 
 /* Fim do Controle da Main
     Inicio do controle da Sessão 1 Home*/
+    #home {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%; /* Garante que o conteúdo ocupe a altura total da tela */
+      text-align: center;
+    }
+    
+    .homecontainer {
+      display: flex;
+      align-items: center;
+    }
+    
+    #home h1, #home span {
+      font-size: 3em;
+      font-weight: 400;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+      animation: none; /* Remove qualquer animação individual */
+    }
+    
+    #home h1 {
+      color: var(--c22);
+      animation: slidedown 2s ease-out forwards;
+    }
+    
+    #home span {
+      color: var(--c11);
+      animation: slideX 2s ease-out forwards;
+    }
+    
+    /* Ajuste a animação slidedown */
+    @keyframes slidedown {
+      0% {
+          transform: translateY(-100%);
+          opacity: 0;
+      }
+      100% {
+          transform: translateY(0);
+          opacity: 1;
+      }
+    }
+    
+    /* Ajuste a animação slideX */
+    @keyframes slideX {
+      0% {
+          transform: translateY(100%);
+          opacity: 0;
+      }
+      100% {
+          transform: translateY(0);
+          opacity: 1;
+      }
+    }
+    
+    
 
 /* Fim do Controle da Sessão 1 Home 
     Inicio do controle da Sessão 2 About*/
+    #about {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 0 4%;
+    }
+    
+    .aboutcontainer {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      max-width: 800px; /* Ajuste conforme necessário */
+      width: 100%;
+      text-align: center;
+    }
+    
+    .aboutcontainer h1 {
+      margin: 60px 0px 0px 0px;
+    }
+    
+    .aboutcontainer img {
+      width: 150px; /* Ajuste conforme necessário */
+      height: 150px;
+      border-radius: 50%;
+      margin: 20px 0px;
+      object-fit: cover; /* Garante que a imagem se ajuste bem dentro do círculo */
+    }
+    
+    .aboutcontainer p {
+      padding: 0 2%;
+    }
+    
   
 /* Fim do Controle da Sessão 2 About
     Inicio do controle da Sessão 3 Education*/
     #education {
-      padding: 20px;
+
       background-color: var(--c55);
       text-align: center;
   }
@@ -293,7 +382,7 @@
       position: flex;
       margin-bottom: 5px;
       border-bottom: 2px solid var(--c22);
-      border-right: 2px solid var(--c22);
+      border-right: 3px solid var(--c22);
   }
   
   .item1 {
@@ -345,7 +434,6 @@
 /* Fim do Controle da Sessão 3 Education
     Inicio do controle da Sessão 4 Experience*/
     #experience {
-      padding: 20px;
       background-color: var(--c55);
   }
   
@@ -355,6 +443,11 @@
     font-size: 3em;
     margin-bottom: 20px;
     font-weight: 900;
+}
+#experience h1 span{
+  font-weight: 400;
+  font-size: 1.1em;
+  color:var(--c11);
 }
 
   #experience h2 {
@@ -377,7 +470,7 @@
       margin: 0 10px;
       background-color: var(--c55);
       border-bottom: 2px solid var(--c22);
-      border-right: 2px solid var(--c22);
+      border-right: 3px solid var(--c22);
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       text-align: justify;
@@ -439,9 +532,9 @@
   .flexcontact {
     flex: 1;
     display: flex;
-    justify-content: space-between; /* ou space-around ou space-evenly */
+    justify-content: center; /* ou space-around ou space-evenly */
     align-items: center; /* Centraliza verticalmente */
-    padding: 20px;
+    padding: 0px;
 }
   
 .form-container {
@@ -449,21 +542,20 @@
   display: flex;
   flex-direction: column; /* Empilhar os elementos verticalmente */
   align-items: center; /* Centralizar horizontalmente */
-  padding: 20px;
+  padding: 60px 20px 20px 20px;
 }
   
   .icons-container {
     display: flex;
     flex-direction: column;
-    align-items: flex-end; /* Alinha os ícones à direita */
-    padding: 20px;
+    align-items: center; /* Alinha os ícones à direita */
+ 
 }
   
   .icon-category {
       display: flex;
       justify-content: flex-start;
-      margin-bottom: 10px;
-      padding: 20px 0px;
+      padding: 0px;
   }
   
   form {
@@ -524,6 +616,7 @@
       font-size: 17px;
       outline: none;
       transition: border-color 0.3s;
+      color: var(--c22);
   }
   
   .input:focus {
