--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@
     --c44: #000000;
     --c55: #ffffff;
     --c66: #333333;
+    --cc77:#999999;
 
   }
   html, body {
@@ -148,7 +149,6 @@
  #svgp9:hover{
   fill:#b80000;
  }
-
 
   .menu-container {
     position: relative;
@@ -516,7 +516,116 @@
   
 /* Fim do Controle da Sessão 4 Experience
     Inicio do controle da Sessão 5 Projects*/
+    #projects {
+      display: flex;
+      flex-direction: row;
+      height: 100vh; /* Isso garante que a altura do contêiner se estenda até o fundo da janela de visualização */
+  }
+  
+  .proj1, .proj2, .proj3 {
+      flex: 1; /* Isso faz com que as divs ocupem o espaço disponível */
+      border: 1px solid black; /* Apenas para visualização */
+      margin: 10px; /* Apenas para visualização */
+      justify-content: space-between;
+      align-items: center;
+  }
+  .proj1{
+    justify-content: center;
+    align-items: center;
+    max-height: 800px;
+    padding: 4px;
+    border-radius: 20px;
+    border-top: none;
+    border-left: none;
+    border-right: 1px solid var(--c22);
+    border-bottom: 1px solid var(--c22);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
 
+  .proj1 h3 {
+      text-align: center;
+      font-weight: 900;
+  }
+  
+  #svgPreview {
+      width: 100%;
+      height: 40%;
+      margin: 4px;
+      padding: 4px;
+      display: flex; /* Ativar o modelo de layout flexível */
+      justify-content: center; /* Centralizar horizontalmente */
+      align-items: center; /* Centralizar verticalmente */
+  }
+  #svgPreview i {
+    font-size: 64px; /* Tamanho do ícone */
+    color: #eee; /* Cor do ícone */  
+}
+
+  .quadriculado {
+    background-image: linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc 100%);
+    background-size: 5px 5px; /* Tamanho dos quadriculados */
+    padding: 5px; /* Adiciona preenchimento à div */
+    box-sizing: border-box; /* Faz com que o preenchimento esteja incluído na largura/altura da div */
+    mix-blend-mode: difference; 
+  }
+
+  #svgCode {
+    width: 100%;
+      height: 100px;
+      margin: 4px;
+      padding: 4px;
+      align-items: center;
+  }
+  #svgCode textarea{
+    height: 100%;
+    width: 100%;
+    color:var(--c11); 
+  }
+ 
+  #compsvg {
+      height: 40px;
+      margin: 4px 4px 20px 4px;
+      padding: 4px;
+  }
+  #imgproj1{
+    width: 32px;
+    height: 32px;
+    }
+
+  #compsvg button {
+    padding: 0px 3vw; /* Use 5vw para tornar o padding responsivo */
+    background-color: var(--c22); /* Cor de fundo do botão */
+    color: var(--c55); /* Cor do texto do botão */
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.6em;
+    transition: background-color 0.3s, transform 0.3s;
+    max-width: 100%; /* Limite a largura máxima para evitar overflow */
+    margin: 0px 5px; /* Adiciona margem entre os botões */
+  }
+  
+  #compsvg button:hover {
+      background-color: var(--c11); /* Cor de fundo alterada ao passar o mouse */
+      transform: scale(1.05); /* Aumenta ligeiramente o tamanho do botão */
+  }
+  
+  #compsvg button:active {
+      transform: scale(0.95); /* Diminui ligeiramente o tamanho do botão quando clicado */
+  }
+  
+  .proj1 {
+      display: flex; /* Ativar o modelo de layout flexível */
+      flex-direction: column; /* Os elementos dentro de .proj1 serão empilhados verticalmente */
+      justify-content: space-between; /* Distribui os itens uniformemente ao longo do eixo principal (verticalmente neste caso) */
+      align-items: center; /* Centraliza os itens ao longo do eixo transversal (horizontalmente neste caso) */
+  }
+
+@media screen and (max-width: 600px) { /* Defina a largura de quebrar para 600px ou qualquer valor que desejar */
+    #projects {
+        flex-direction: column; /* Altere a direção do layout flexível para coluna em telas pequenas */
+    }
+}
 /* Fim do Controle da Sessão 5 Projects
     Inicio do controle da Sessão 6 Contact*/
     #contact {
@@ -548,8 +657,7 @@
   .icons-container {
     display: flex;
     flex-direction: column;
-    align-items: center; /* Alinha os ícones à direita */
- 
+    align-items: center; /* Alinha os ícones ao centro */
 }
   
   .icon-category {
@@ -625,7 +733,6 @@
   .input-single .input:focus {
     border-bottom: 2px solid var(--c22); /* Borda inferior dos inputs ao focar */
 }
-
   
   .input-single {
       position: relative;
@@ -646,7 +753,6 @@
   }
   
   .icon {
-      
       width: 32px;
       height: 32px;
       margin: 10px; /* Espaçamento entre os ícones */
@@ -666,8 +772,6 @@
           justify-content: center;
       }
   }
-  
-    
 /* Fim do Controle da Sessão 6 Contact
     Inicio Animação de manutenção */
 
