--- a/styles.css
+++ b/styles.css
@@ -183,7 +183,10 @@
     margin-left: 4%;
     margin-right: auto; /* Mantém a logo à esquerda */
   }
-  
+  .isvg-container{
+    margin: 9px 2px 2px;
+
+  }
   .menu-items {
     padding: 0px 0;
     list-style: none;
@@ -246,9 +249,11 @@
   main {
     padding: 0px 0px;
     display: none;
+    margin: 0;
   }
   
   section {
+    margin-top: 0;
     margin-bottom: 0px;
     min-height: 100vh; /* Minimum height of viewport */
     padding: 20px 20px 20px 20px; /* Padding around content */
@@ -346,39 +351,75 @@
       flex-direction: column;
       align-items: center;
       padding: 60px 4%;
-    }
+      background-color:#fff;
+      margin: 0;
+      }
     
     .aboutcontainer {
       display: flex;
       flex-direction: column;
       align-items: center;
-      max-width: 800px; /* Ajuste conforme necessário */
+      max-width: 1000px; /* Ajuste conforme necessário */
       width: 100%;
       text-align: center;
     }
     
     .aboutcontainer h1 {
-      margin: 0px 0px 0px 0px;
-      font-size: 2em;
+      margin: 0px;
+      font-size: 3em;
+      font-weight: 900;
+      color: var(--c22);
     }
     
-    .aboutcontainer img {
-      width: 150px; /* Ajuste conforme necessário */
-      height: 150px;
+    .image-container {
+      position: relative;
+      width: 200px; /* Ajuste conforme necessário */
+      height: 200px;
+      margin: 10px auto; /* Centraliza e adiciona margem inferior */
+  }
+  
+  .image-container img {
+      width: 100%;
+      height: 100%;
       border-radius: 50%;
-      margin: 20px 0px;
-      object-fit: cover; /* Garante que a imagem se ajuste bem dentro do círculo */
-    }
-    
+      object-fit: cover;
+      position: relative;
+      z-index: 1;
+  }
+  
+  .image-container::before {
+      content: '';
+      position: absolute;
+      top: -2px;
+      left: -2px;
+      width: 204px; /* Ajuste conforme necessário */
+      height: 204px;
+      border-radius: 50%;
+      background: linear-gradient(to bottom, #226d43,#6a0dad);
+      z-index: 0;
+      box-sizing: border-box;
+      padding: 10px; /* Ajuste conforme necessário para a espessura da borda */
+  }
+
     .aboutcontainer p {
       padding: 0 2%;
+      font-size: 18px;
+      max-width: 950px;
+      color: var(--c11);
+      text-shadow: 0.5px 0.5px 1.5px #00000066;
+      margin:5px;
     }
+    .aboutcontainer p span{
+      color: var(--c22);
+      font-size: 1.1em;
+    }
+
     
   
 /* Fim do Controle da Sessão 2 About
     Inicio do controle da Sessão 3 Education*/
     #education {
-      padding:60px 4%;
+      padding:40px 4%;
       background-color: var(--c55);
       text-align: center;
   }
@@ -391,7 +432,7 @@
   #education h2 {
       color: var(--c11);
       font-size: 2em;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
       font-weight: 300;
       
   }
@@ -399,7 +440,7 @@
   .education-container {
       position: flex;
       width: 100%;
-      max-width: 1200px;
+      max-width: 6000px;
       margin: 0 auto;
   }
   
@@ -407,11 +448,12 @@
       background-color: var(--c55);
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      padding: 20px;
+      padding: 5px;
       width: 70vw;
-      max-width: none;
+      max-width: 1200px;
       position: flex;
-      margin-bottom: 5px;
+      margin-top:10px;
+      margin-bottom: 15px;
       border-bottom: 2px solid var(--c22);
       border-right: 3px solid var(--c22);
   }
@@ -755,7 +797,7 @@
   }
   
   .icon:hover{
-    animation: circularMotion 2s linear infinite;
+    animation: circularMotion 0.5s linear infinite;
 
 
   }
@@ -807,6 +849,7 @@
       text-align: center;
       margin: 20px 0px;
       color: var(--c11);
+      font-size: 16px;
   }
   
   .input {
@@ -875,27 +918,27 @@
 } */
 
 @keyframes circularMotion {
-  0% {
-    transform: rotate(0deg);
+0% {
+    transform: scale(1);
 }
 25% {
-    transform: rotate(-25deg);
+    transform: scale(1.03);
 }
 50% {
-    transform: rotate(0deg);
+    transform: scale(1);;
 }
 75% {
-    transform: rotate(25deg);
+    transform: scale(0.97);
 }
 100% {
-    transform: rotate(0deg);
+    transform: scale(1);
 }
 
 }
 
   .icon {
-      width: 32px;
-      height: 32px;
+      width: 50px;
+      height: 50px;
       margin: 10px; /* Espaçamento entre os ícones */
       transition: transform 0.9s ease;
   }
