--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,6 @@
     font-family: "Poppins", sans-serif;
   }
 
-  
-  /* --c11: #3cb371; */
-
   :root {
     --c11: #226d43;
     --c22: #6a0dad;
@@ -40,13 +37,6 @@
     font-weight: 300;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
-
-/* Paletas de cores
-  roxo #6a0dad 
-  verde #3cb371
-  azul #1e90ff
-
-  */
 
 /* Fim do Controle Geral
     Inicio do Controle da Intro */
@@ -125,13 +115,13 @@
 }
 /* logo easteregg */
  /* #svgp1{
-  fill:;
+  fill:transparent;
  }
  #svgp2{
   fill:transparent;
  }
  #svgp3{
-  fill:;
+  fill:transparent;
  } */
  #svgp4:hover{
   fill:#800080;
@@ -165,18 +155,17 @@
   .menu-toggle {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
     display: none;
-    background-color: transparent; /* Definir a cor de fundo como transparente */
+    background-color: transparent;
     color: var(--c55);
     border: none;
     padding: 10px;
     cursor: pointer;
     margin-right: 4%;
-    font-size: 16px; /* Tamanho da fonte */
+    font-size: 16px; 
   }
   
   .menu-toggle:hover {
-    background-color: var(--c22);
-    /* background-color: var(--c22); Mudar a cor de fundo no hover */
+    background-color: var(--c22); /* Mudar a cor de fundo no hover */
   }
   
   
@@ -207,7 +196,7 @@
 
   ul.menu-items li:hover {
     color: var(--c55);
-    background-color: var(--c22); /* Links ao passar o mouse */
+    background-color: var(--c22); /* mudar com dos Links ao passar o mouse */
 }
 
 @media (max-width: 520px) {
@@ -223,8 +212,8 @@
       width: 130px;
       background-color: var(--c11);
       flex-direction: column;
-      border-bottom-left-radius: 6px; /* Adiciona arredondamento ao canto inferior esquerdo */
-      border-bottom-right-radius: 6px; /* Adiciona arredondamento ao canto inferior direito */
+      border-bottom-left-radius: 6px; 
+      border-bottom-right-radius: 6px;
      
     }
   
@@ -238,26 +227,47 @@
     .menu-items.active {
       display: flex;
     }
-    ul.menu-items li:hover {
-      color: var(--c55);
-      background-color: var(-22); /* Links ao passar o mouse */
-  }
+
   }
 
 /* Fim do Controle de Header
     Inicio do Controle de Main */
 
-  main {
-    padding: 0px 0px;
-    display: none;
-    margin: 0;
+main {
+  padding: 0px 0px;
+  display: none;
+  margin: 0;
+  overflow-y: scroll;
+  height: 100%;
+  padding-right: 0px; /* Espaço para a barra de rolagem personalizada */
+  scroll-behavior: smooth;
+  box-sizing: content-box;
 }
-  
+
+main::-webkit-scrollbar {
+  width: 14px; /* Largura da barra de rolagem */
+  position: absolute;
+}
+
+main::-webkit-scrollbar-track {
+  background:transparent;
+  margin-top: 45px;
+}
+
+main::-webkit-scrollbar-thumb {
+  background: var(--c22); 
+  border: 3px solid white;
+  border-radius: 6px;
+}
+
+main::-webkit-scrollbar-thumb:hover {
+  background: var(--c11); 
+}
   section {
     margin-top: 0;
     margin-bottom: 0px;
-    min-height: 100vh; /* Minimum height of viewport */
-    padding: 0; /* Padding around content */
+    min-height: 100vh; 
+    padding: 0; 
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -288,7 +298,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      max-width: 1000px; /* Ajuste conforme necessário */
+      max-width: 1000px; 
       width: 100%;
       text-align: center;
     }
@@ -302,9 +312,9 @@
     
     .image-container {
       position: relative;
-      width: 200px; /* Ajuste conforme necessário */
+      width: 200px; 
       height: 200px;
-      margin: 10px auto; /* Centraliza e adiciona margem inferior */
+      margin: 10px auto;
   }
   
   .image-container img {
@@ -321,13 +331,13 @@
       position: absolute;
       top: -2px;
       left: -2px;
-      width: 204px; /* Ajuste conforme necessário */
+      width: 204px; 
       height: 204px;
       border-radius: 50%;
       background: linear-gradient(to bottom, #226d43,#6a0dad);
       z-index: 0;
       box-sizing: border-box;
-      padding: 10px; /* Ajuste conforme necessário para a espessura da borda */
+      padding: 10px;
   }
 
     .aboutcontainer p {
@@ -505,7 +515,7 @@
       line-height: 1.5;
   }
   
-  /* Responsivo */
+  /* Responsividade */
   @media (max-width: 768px) {
       .experience-container {
           flex-direction: column;
@@ -535,16 +545,16 @@
       flex-direction: row;
       height: 450px; /* Isso garante que a altura do contêiner se estenda até o fundo da janela de visualização */
   }
-  @media screen and (max-width: 600px) { /* Defina a largura de quebrar para 600px ou qualquer valor que desejar */
+  @media screen and (max-width: 600px) { /* Defina a largura de quebra */
     #projects {
-        flex-direction: column; /* Altere a direção do layout flexível para coluna em telas pequenas */
+        flex-direction: column; /* Altera a direção do layout flexível para coluna em telas pequenas */
     }
 }
   
   .proj1, .proj2, .proj3 {
-    flex: 1; /* Isso faz com que as divs ocupem o espaço disponível */
-    border: 1px solid black; /* Apenas para visualização */
-    margin: 10px; /* Apenas para visualização */
+    flex: 1; /* Divs utilizam o espaço disponível */
+    border: 1px solid black; 
+    margin: 10px;
     justify-content: center;
     align-items: center;
     max-height: 800px;
@@ -591,100 +601,6 @@
       margin: auto;
       font-size: 30px;
   }
-  
-  /* #svgPreview {
-      width: 100%;
-      height: 40%;
-      margin: 4px;
-      padding: 4px;
-      display: flex; /* Ativar o modelo de layout flexível 
-      justify-content: center; /* Centralizar horizontalmente 
-      align-items: center; /* Centralizar verticalmente 
-  } 
-  #svgPreview i {
-    font-size: 64px; /* Tamanho do ícone 
-    color: #eee; /* Cor do ícone  
-}
-
-  .quadriculado {
-    background-image: linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc 100%);
-    background-size: 5px 5px; /* Tamanho dos quadriculados 
-    padding: 5px; /* Adiciona preenchimento à div 
-    box-sizing: border-box; /* Faz com que o preenchimento esteja incluído na largura/altura da div
-    mix-blend-mode: difference; 
-  }
-
-  #svgCode {
-     width: 100%;
-      height: 100px;
-      margin: 4px;
-      padding: 4px;
-      align-items: center;
-  }
-  #svgCode textarea{
-    height: 100%;
-    width: 100%;
-    /* color:var(--c22);  
-  }
- 
-  #compsvg {
-      height: 40px;
-      margin: 4px 4px 20px 4px;
-      padding: 4px;
-  }
-  #imgproj1{
-    width: 32px;
-    height: 32px;
-    }
-
-  #compsvg button {
-    padding: 0px 2vw; /* Use 5vw para tornar o padding responsivo
-    background-color: var(--c11); /* Cor de fundo do botão
-    color: var(--c55); /* Cor do texto do botão 
-    border: 0;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1.6em;
-    transition: background-color 0.3s, transform 0.3s;
-    max-width: 100%; /* Limite a largura máxima para evitar overflow 
-    margin: 0px 5px; /* Adiciona margem entre os botões
-  }
-  
-  #compsvg button:hover {
-      background-color: var(--c22); /* Cor de fundo alterada ao passar o mouse 
-      transform: scale(1.05); /* Aumenta ligeiramente o tamanho do botão 
-  }
-  
-  #compsvg button:active {
-      transform: scale(0.95); /* Diminui ligeiramente o tamanho do botão quando clicado
-  }
-  
-  .proj1 {
-      display: flex; /* Ativar o modelo de layout flexível 
-      flex-direction: column; /* Os elementos dentro de .proj1 serão empilhados verticalmente 
-      justify-content: space-between; /* Distribui os itens uniformemente ao longo do eixo principal (verticalmente neste caso) 
-      align-items: center; /* Centraliza os itens ao longo do eixo transversal (horizontalmente neste caso) 
-  }
-
-
-.CodeMirror{
-  width: 100% !important;
-}
-
-.CodeMirror-gutter{
-  width: 25px !important;
-}
-.CodeMirror-scroll{
-  padding-left: 25px !important ;
-  /* padding-right: 25px !important ; 
-  height: 100px !important;
-}
-.CodeMirror.cm-s-default.CodeMirror-wrap{
-  height: 100px !important;
-}
-*/
-
-
 /* Fim do Controle da Sessão 5 Works
     Inicio do controle da Sessão 6 Contact*/
     #contact {
@@ -700,8 +616,8 @@
   .flexcontact {
     flex: 1;
     display: flex;
-    justify-content: center; /* ou space-around ou space-evenly */
-    align-items: center; /* Centraliza verticalmente */
+    justify-content: center;
+    align-items: center; 
     padding: 0px;
 }
   
@@ -709,7 +625,7 @@
   background-color: var(--c55);
   display: flex;
   flex-direction: column; /* Empilhar os elementos verticalmente */
-  align-items: center; /* Centralizar horizontalmente */
+  align-items: center;
   padding: 60px 20px 20px 20px;
 }
   
@@ -748,15 +664,15 @@
   }
   
   form input[type=submit] {
-      padding: 15px 5vw; /* Use 5vw para tornar o padding responsivo */
-      background-color: var(--c22); /* Cor de fundo do botão */
-      color:var(--c55); /* Cor do texto do botão */
+      padding: 15px 5vw; /* Vw para tornar o padding responsivo */
+      background-color: var(--c22); 
+      color:var(--c55); 
       border: 0;
       border-radius: 5px;
       cursor: pointer;
       font-size: 1.6em;
       transition: background-color 0.3s, transform 0.3s;
-      max-width: 100%; /* Limite a largura máxima para evitar overflow */
+      max-width: 100%; /* Limite de largura máxima para evitar overflow */
   }
   
   form input[type=submit]:hover {
@@ -770,7 +686,7 @@
   
   form h1 {
       text-align: center;
-      font-size: clamp(24px, 5vw, 30px); /* Tamanho da fonte responsivo com tamanho mínimo de 28px e máximo de 30px */
+      font-size: clamp(24px, 5vw, 30px); /* Tamanho da fonte responsivo */
       color: var(--c22);
       white-space: nowrap;
   }
@@ -785,7 +701,7 @@
   .input {
       width: 100%;
       border: 0;
-      border-bottom: 2px solid var(--c11); /* Apenas uma linha na parte inferior */
+      border-bottom: 2px solid var(--c11); 
       background-color: var(--c55); /* Cor de fundo da caixa de texto */
       padding: 5px;
       font-size: 17px;
@@ -818,34 +734,6 @@
       width: 100%;
       text-align: center;
   }
-  
-  /* @keyframes rotate360 {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(180deg);
-    }
-} */
-/* @keyframes pendulum {
-  0% {
-    transform: rotate(0deg);
-}
-25% {
-    transform: rotate(-15deg);
-}
-50% {
-    transform: rotate(0deg);
-}
-75% {
-    transform: rotate(15deg);
-}
-100% {
-    transform: rotate(0deg);
-}
-
-
-} */
 
 @keyframes circularMotion {
 0% {
@@ -863,9 +751,7 @@
 100% {
     transform: scale(1);
 }
-
 }
-
   .icon {
       width: 50px;
       height: 50px;
@@ -932,30 +818,3 @@
     }
   }
   /* Fim da Animação de manutenção */
-main {
-  overflow-y: scroll;
-  height: 100%;
-  padding-right: 0px; /* Espaço para a barra de rolagem personalizada */
-  scroll-behavior: smooth;
-  box-sizing: content-box;
-}
-
-main::-webkit-scrollbar {
-  width: 14px; /* Largura da barra de rolagem */
-  position: absolute;
-}
-
-main::-webkit-scrollbar-track {
-  background:transparent;
-  margin-top: 45px;
-}
-
-main::-webkit-scrollbar-thumb {
-  background: var(--c22); 
-  border: 3px solid white;
-  border-radius: 6px;
-}
-
-main::-webkit-scrollbar-thumb:hover {
-  background: var(--c11); 
-}
